--- a/frontend/app/main-view/item/item.component.scss
+++ b/frontend/app/main-view/item/item.component.scss
@@ -12,7 +12,7 @@
   }
 
   &.item-hover:hover {
-    background-color: mat.get-color-from-palette($primary, 500);
+    background-color: mat.m2-get-color-from-palette($primary, 500);
   }
 }
 
