--- a/frontend/variables.scss
+++ b/frontend/variables.scss
@@ -3,17 +3,17 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$awrss-primary: mat.define-palette(mat.$grey-palette);
-$awrss-accent: mat.define-palette(mat.$deep-orange-palette);
+$awrss-primary: mat.m2-define-palette(mat.$m2-grey-palette);
+$awrss-accent: mat.m2-define-palette(mat.$m2-deep-orange-palette);
 
 // The warn palette is optional (defaults to red).
 // $awrss-warn:    mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$theme: mat.define-dark-theme((color: (primary: $awrss-primary,
+$theme: mat.m2-define-dark-theme((color: (primary: $awrss-primary,
         accent: $awrss-accent,
       ),
-      typography: mat.define-typography-config($font-family: 'Roboto,Helvetica Neue,sans-serif'),
+      typography: mat.m2-define-typography-config($font-family: 'Roboto,Helvetica Neue,sans-serif'),
       density: 0,
     ));
 
