--- a/frontend/theme.scss
+++ b/frontend/theme.scss
@@ -1,11 +1,11 @@
 @use '@angular/material' as mat;
 @import 'variables';
 
-// :root {
-//   @include mat.button-overrides(( // This isn't safe for internationalization
-//       text-label-text-transform: uppercase,
-//     ));
-// }
+:root {
+  @include mat.button-overrides(( // This isn't safe for internationalization
+      label-text-transform: uppercase,
+    ));
+}
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
