--- a/frontend/app/admin/edit-feed-dialog/edit-feed-dialog.component.html
+++ b/frontend/app/admin/edit-feed-dialog/edit-feed-dialog.component.html
@@ -5,33 +5,38 @@
       novalidate
       name="feedForm">
   <mat-dialog-content>
-    <div *ngIf="feed.title && feed.userTitle && feed.userTitle !== feed.title"
-         matTooltip="The default title specified by feed.">
-      Title: {{feed.title}}
-    </div>
+    @if (feed.title && feed.userTitle && feed.userTitle !== feed.title) {
+      <div matTooltip="The default title specified by feed.">
+        Title: {{feed.title}}
+      </div>
+    }
     <div layout="row">
       Feed URL:
-      <a *ngIf="!feed.url.startsWith('!')"
-         class="url"
-         [href]="feed.url"
-         rel="noopener"
-         target="_blank">
-        {{feed.url}}
-      </a>
-      <div *ngIf="feed.url.startsWith('!')"
-           class="command">
-        {{feed.url}}
+      @if (!feed.url.startsWith('!')) {
+        <a class="url"
+           [href]="feed.url"
+           rel="noopener"
+           target="_blank">
+          {{feed.url}}
+        </a>
+      }
+      @if (feed.url.startsWith('!')) {
+        <div class="command">
+          {{feed.url}}
+        </div>
+      }
+    </div>
+    @if (feed.siteUrl && feed.url !== feed.siteUrl) {
+      <div>
+        Site URL:
+        <a class="url"
+           [href]="feed.siteUrl"
+           rel="noopener"
+           target="_blank">
+          {{feed.siteUrl}}
+        </a>
       </div>
-    </div>
-    <div *ngIf="feed.siteUrl && feed.url !== feed.siteUrl">
-      Site URL:
-      <a class="url"
-         [href]="feed.siteUrl"
-         rel="noopener"
-         target="_blank">
-        {{feed.siteUrl}}
-      </a>
-    </div>
+    }
     <mat-form-field>
       <mat-label>Title Override</mat-label>
       <input matInput
@@ -43,10 +48,11 @@
       <mat-label>Category</mat-label>
       <mat-select formControlName="categoryId">
         <mat-option [value]="undefined">None</mat-option>
-        <mat-option *ngFor="let category of categories"
-                    [value]="category.id">
-          {{category.title}}
-        </mat-option>
+        @for (category of categories; track category) {
+          <mat-option [value]="category.id">
+            {{category.title}}
+          </mat-option>
+        }
       </mat-select>
     </mat-form-field>
     <div>
