--- a/frontend/app/main-view/item/item.component.scss
+++ b/frontend/app/main-view/item/item.component.scss
@@ -1,5 +1,5 @@
 @use '@angular/material' as mat;
-@import 'variables';
+@use 'variables' as var;
 
 :host {
   color: white;
@@ -12,7 +12,7 @@
   }
 
   &.item-hover:hover {
-    background-color: mat.m2-get-color-from-palette($primary, 500);
+    background-color: mat.m2-get-color-from-palette(var.$primary, 500);
   }
 }
 
