--- a/frontend/theme.scss
+++ b/frontend/theme.scss
@@ -15,6 +15,9 @@ $warn: map.get(variables.$theme, warn);
       container-color: mat.m2-get-color-from-palette(variables.$primary, 700),
       supporting-text-color: white,
     ));
+
+  @include mat.toolbar-overrides((container-background-color: mat.m2-get-color-from-palette(variables.$primary, 900),
+    ));
 }
 
 // Include the common styles for Angular Material. We include this here so that you only
